--- a/app/package.json
+++ b/app/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/jguillermo/node-example#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0"
+    "babel-register": "^6.26.0",
+    "morgan": "^1.9.0"
   }
 }
