--- a/app/package.json
+++ b/app/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "app",
+  "name": "typescript-node",
   "version": "1.0.0",
-  "description": "",
+  "description": "Typescript Node Express",
   "main": "src/index.js",
+  "author": "Jose Guillermo",
+  "license": "ISC",
   "scripts": {
-    "start": "node --require 'babel-register' src/index.js"
+    "start": "npm run serve",
+    "build": "npm run build-ts && npm run tslint",
+    "serve": "node dist/server.js",
+    "watch-node": "nodemon dist/server.js",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "test": "jest --forceExit --coverage --verbose",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "debug": "npm run build && npm run watch-debug",
+    "serve-debug": "nodemon --inspect dist/server.js",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com/jguillermo/node-example.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jguillermo/node-example/issues"
-  },
-  "homepage": "https://github.com/jguillermo/node-example#readme",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "dotenv": "^5.0.0",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0",
-    "morgan": "^1.9.0"
+    "@types/dotenv": "^4.0.2",
+    "@types/morgan": "^1.7.32",
+    "concurrently": "^3.5.1",
+    "nodemon": "^1.14.12",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.1"
   }
 }
